[package]
name = "snow_kitten_shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
colored = "2.0.0"
crossbeam-channel = "0.5.6"
crossterm = "0.25.0"
ctrlc = "3.2.3"
regex = "1.7.0"
signal-hook = { version = "0.3.14", features = ["iterator"] }
winapi = { version = "0.3.9", features = ["errhandlingapi"] }
